@@ -4,12 +4,15 @@ import cc.demo.order.service.order.OrderService;
 import cc.demo.order.service.user.UserService;
 import cc.demo.order.vo.OrderCalculateVo;
 import cc.demo.order.vo.StatisticsVo;
+import cc.demo.order.vo.UserInfoVo;
 import cc.demo.order.vo.UserVo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,10 +24,14 @@ public class StatisticsServiceImpl implements StatisticsService {
 
     public StatisticsVo statistics(int count) {
         List<OrderCalculateVo> orderCounts = orderService.getOrderCalculate(count);
-
-        List<UserVo> userVos = userService.getUsers(orderCounts.stream().map(OrderCalculateVo::getUserId).collect(Collectors.toList()));
-        Map<String, UserVo> userMap = userVos.stream().collect(Collectors.toMap(UserVo::getUid, user -> user));
-
-        return StatisticsVo.builder().user(userMap).build();
+        Map<String, UserInfoVo> userMap = new HashMap<>();
+        if (!orderCounts.isEmpty()) {
+            List<Long> userIds = orderCounts.stream().map(OrderCalculateVo::getUserId).toList();
+            List<UserInfoVo> userInfoVos = userService.getUsers(userIds);
+            userMap = userInfoVos.stream()
+                    .collect(Collectors.toMap(UserInfoVo::getUid, user -> user));
+        }
+        
+        return StatisticsVo.builder().users(userMap).build();
     }
 }
